--- a/app/src/main/res/layout/activity_nfcv.xml
+++ b/app/src/main/res/layout/activity_nfcv.xml
@@ -10,28 +10,58 @@
         android:layout_height="wrap_content"
         android:text="NFCV 标签信息"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:paddingBottom="12dp"/>
+        android:textStyle="bold" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1">
 
         <TextView
             android:id="@+id/logTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:lineSpacingExtra="4dp"/>
+            android:lineSpacingExtra="4dp"
+            android:textSize="16sp" />
     </ScrollView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:paddingVertical="16dp"
         android:text="请将 NFCV 标签靠近设备背部"
-        android:textSize="16sp"
         android:textColor="#FF5722"
-        android:paddingTop="16dp"
-        android:layout_gravity="center_horizontal"/>
+        android:textSize="16sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edit_text_address"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="输入地址"
+            android:importantForAutofill="no"
+            android:inputType="numberSigned" />
+
+        <EditText
+            android:id="@+id/edit_text_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="输入值"
+            android:importantForAutofill="no"
+            android:inputType="numberSigned" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="修改" />
+    </LinearLayout>
 </LinearLayout>
