--- a/app/src/main/res/xml/tech_list.xml
+++ b/app/src/main/res/xml/tech_list.xml
@@ -13,6 +13,9 @@
     <!--多个<tech-list>元素之间是OR关系，<tech-list>元素中的<tech>是AND关系,
     只要任何单个tech-list集合是getTechList()返回的technologies集合的子集，那么你的Activity将被认为匹配了-->
     <tech-list>
+        <tech>android.nfc.tech.NfcV</tech>
+    </tech-list>
+    <tech-list>
         <tech>android.nfc.tech.Ndef</tech>
         <tech>android.nfc.tech.MifareClassic</tech>
         <tech>android.nfc.tech.MifareUltralight</tech>
